# split_pdf.flutter

./: .gitmodules  README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/split_pdf/: MainActivity.kt
clib/: extract_test.cpp  split_pdf.cpp  test.sh
clib/extract_test.dSYM/Contents/: Info.plist
clib/extract_test.dSYM/Contents/Resources/DWARF/: extract_test
clib/extract_test.dSYM/Contents/Resources/Relocations/aarch64/: extract_test.yml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  split_pdf.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
